--- a/style.css
+++ b/style.css
@@ -23,13 +23,16 @@ article {
 section {
   margin: 1em;
   padding: 1em;
-  padding-left: 4em;
 }
 
 header,
 main,
 footer {
   margin: 0 auto;
+  font-family: Sans-serif;
+}
+.line-header{
+  border: #BBBBBB;
 }
 
 header {
@@ -50,6 +53,7 @@ header p {
 header img {
   border-radius: 50%;
   width: 200px;
+  margin-top: 7%;
 }
 
 header a {
@@ -58,7 +62,7 @@ header a {
 }
 
 hr {
-  border: 1px solid #000;
+  border: 1px solid #BBBBBB;
 }
 
 h1 {
@@ -70,16 +74,70 @@ h1 {
 h3 {
   text-transform: uppercase;
 }
-main h2 {
-  color: Navy;
+header h2 {
+  color: #555;
 }
+
 h3,
 h4 {
   font-weight: bold;
 }
-
 main {
-  max-width: 1000px;
+  max-width: 1200px;
+}
+.frame{
+  border: 1px solid #DDDDDD ;
+  border-radius: 10px;
+  padding: 2%;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  margin-top: 5%;
+  margin-bottom: 5%;
+  
+}
+.container{
+  display: flex;
+  flex: 0 0 50%;
+}
+.column-left{
+  max-width: 50%;
+  text-align: justify;
+  padding-right: 4%;
+}
+.column-right{
+  display: flex;
+}
+.contact{
+  flex: 1;
+  font-weight: bold;
+  min-width: 40%;
+}
+.lable-subject{
+  text-align: center;
+  margin-bottom: 3%;
+  margin-top: 10%;
+}
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  border: 1px solid #DDDDDD ;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  margin-top: 2%;
+}
+.col-name{
+  width: 20%;
+  background-color: #33CC66;
+  padding: 2%;
+  text-align: center;
+  font-size: 18px;
+}
+.col-detail{
+  padding: 2%;
+  width: 68%;
+  padding-left: 5%;
+}
+.description{
+  margin-left: 4%;
 }
 .skill-bar {
   width: 300px;
