--- a/style.css
+++ b/style.css
@@ -2,9 +2,10 @@
 
 body {
   margin: 0;
-  font-family: "Raleway";
+  font-family: Sans-serif;
   font-size: 16px;
   line-height: 1.8em;
+  scroll-behavior: smooth;
 }
 
 a {
@@ -29,19 +30,51 @@ header,
 main,
 footer {
   margin: 0 auto;
-  font-family: Sans-serif;
 }
-.line-header{
-  border: #BBBBBB;
+
+.navbar {
+  background-color: #33cc99;
+  padding: 15px 0;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  z-index: 1000;
+  margin: 0 !important;
+  display: flex;
+  justify-content: center;
+  flex-wrap: nowrap;
+}
+
+.navbar-nav {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+}
+
+.nav-item {
+  display: inline-block;
+  margin-right: 15px;
+}
+
+.nav-link {
+  color: #fff;
+  text-decoration: none;
+  font-size: 18px;
+  transition: 0.3s;
+  margin-left: 70px;
+}
+
+.nav-link:hover {
+  color: #f8f9fa;
 }
 
 header {
-  padding: 2em;
   text-align: center;
   background-image: url("./img/bg");
   background-size: cover;
-  background-position: fixed;
   color: white;
+  padding-bottom: 2%;
 }
 
 header p {
@@ -53,16 +86,16 @@ header p {
 header img {
   border-radius: 50%;
   width: 200px;
-  margin-top: 7%;
+  margin-top: 13%;
+  margin-bottom: 3%;
 }
 
 header a {
-  margin-left: 10px;
   text-align: left !important;
 }
 
 hr {
-  border: 1px solid #BBBBBB;
+  border: 1px solid #bbbbbb;
 }
 
 h1 {
@@ -77,7 +110,12 @@ h3 {
 header h2 {
   color: #555;
 }
-
+.icon {
+  margin: 1.5% auto;
+}
+.icon-mouse {
+  margin-top: 2.5%;
+}
 h3,
 h4 {
   font-weight: bold;
@@ -85,33 +123,31 @@ h4 {
 main {
   max-width: 1200px;
 }
-.frame{
-  border: 1px solid #DDDDDD ;
+.frame {
+  border: 1px solid #dddddd;
   border-radius: 10px;
   padding: 2%;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  margin-top: 5%;
-  margin-bottom: 5%;
-  
+  margin: 5% 0;
 }
-.container{
+.container {
   display: flex;
   flex: 0 0 50%;
 }
-.column-left{
+.column-left {
   max-width: 50%;
   text-align: justify;
   padding-right: 4%;
 }
-.column-right{
+.column-right {
   display: flex;
 }
-.contact{
+.contact {
   flex: 1;
   font-weight: bold;
   min-width: 40%;
 }
-.lable-subject{
+.lable-subject {
   text-align: center;
   margin-bottom: 3%;
   margin-top: 10%;
@@ -119,39 +155,64 @@ main {
 .row {
   display: flex;
   flex-wrap: wrap;
-  border: 1px solid #DDDDDD ;
+  border: 1px solid #dddddd;
   border-radius: 10px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   margin-top: 2%;
 }
-.col-name{
+.col-name {
   width: 20%;
-  background-color: #33CC66;
+  background-color: #009966;
   padding: 2%;
   text-align: center;
   font-size: 18px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
-.col-detail{
+.col-detail {
   padding: 2%;
   width: 68%;
   padding-left: 5%;
 }
-.description{
+.description {
   margin-left: 4%;
 }
-.skill-bar {
-  width: 300px;
-  height: 20px;
-  background-color: #ddd;
-  margin-bottom: 10px;
+.styled {
+  max-width: 10%;
+  border: 0;
+  line-height: 2.5;
+  padding: 0 1%;
+  margin: 0 3%;
+  font-size: 1rem;
+  text-align: center;
+  color: #fff;
+  text-shadow: 1px 1px 1px #000;
+  border-radius: 10px;
+  background-color: #009966;
+  background-image: linear-gradient(
+    to top left,
+    rgba(0, 0, 0, 0.2),
+    rgba(0, 0, 0, 0.2) 30%,
+    rgba(0, 0, 0, 0)
+  );
+  box-shadow: inset 2px 2px 3px rgba(255, 255, 255, 0.6),
+    inset -2px -2px 3px rgba(0, 0, 0, 0.6);
 }
 
-.skill-level {
-  height: 100%;
-  background-color: #4caf50;
-  border-radius: 3%;
+.styled:hover {
+  background-color: #669966;
 }
 
+.styled:active {
+  box-shadow: inset -2px -2px 3px rgba(255, 255, 255, 0.6),
+    inset 2px 2px 3px rgba(0, 0, 0, 0.6);
+}
+
+.item-skill {
+  margin: 0 13%;
+}
 footer {
   text-align: center;
 }
