--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Raleway");
 
-body {
+html, body {
   margin: 0;
   font-family: Sans-serif;
   font-size: 16px;
@@ -13,10 +13,6 @@ a {
   color: #000;
   text-decoration: none;
 }
-a:hover {
-  opacity: 0.5;
-}
-
 article {
   padding: 0 1em;
 }
@@ -35,6 +31,11 @@ footer {
   margin-right: 20%;
   font-weight: bold ;
   color: #fff;
+  text-decoration: none;
+  transition: 0.3s;
+}
+.lable-name:hover {
+  color: #f58c04;
 }
 .navbar {
   background-color: #669999;
@@ -70,7 +71,7 @@ footer {
 }
 
 .nav-link:hover {
-  border: 1 solid #dddddd;
+  color:  #f58c04;
 }
 
 header {
@@ -103,7 +104,6 @@ hr {
 }
 
 h1 {
-  text-transform: uppercase;
   margin: 1em 0;
   color: #003399;
 }
@@ -125,12 +125,13 @@ header h2 {
   border-radius: 50%;
   margin: 5px;
   background-color: #EEEE;
-  transition: background-color 0.3s ease;
+  transition: background-color 0.3s ease, box-shadow 0.3s ease;
   margin-top: -1.5%;
 }
 
 .icon a:hover {
-  background-color: #DDDDDD;
+  background-color: #CCFFFF;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
 h3,
 h4 {
@@ -223,18 +224,36 @@ main {
   box-shadow: inset 2px 2px 3px rgba(255, 255, 255, 0.6),
     inset -2px -2px 3px rgba(0, 0, 0, 0.6);
 }
-
 .styled:hover {
   background-color: #FF6666;
 }
-
 .styled:active {
   box-shadow: inset -2px -2px 3px rgba(255, 255, 255, 0.6),
     inset 2px 2px 3px rgba(0, 0, 0, 0.6);
 }
-
 .item-skill {
   margin: 0 13%;
+}
+.contact-after{
+  font-weight: 100;
+  text-align: center;
+  padding: 5% 0;
+}
+.contact-after .label{
+  color: #555;
+}
+.contact-after .label-contact{
+  font-size: 45px;
+  font-weight: bold;
+}
+.contact-after .email-add {
+  border: 1px solid #000;
+  padding: 2% 1%;
+  border-radius: 20px;
+  margin: 2% 20%;
+}
+.contact-after .icon-link{
+  margin-left: 2%;
 }
 footer {
   text-align: center;
