--- a/style.css
+++ b/style.css
@@ -252,6 +252,9 @@ main {
   border-radius: 20px;
   margin: 2% 20%;
 }
+.email-add a:hover {
+  color: #f58c04;
+}
 .contact-after .icon-link{
   margin-left: 2%;
 }
